test/importers/invalid/unparsed_reserved_column_name_importer.rb
require 'csv_party'

class UnparsedReservedColumnNameImporter < CSVParty::Importer
  column :unparsed
end
